Added username to post schema, added get user endpoint
